[package]
name = "husky_rock"
version = "0.1.0"
authors = ["Christian Korn <c.a.korn@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2] # for installation instructions go to https://github.com/Rust-SDL2/rust-sdl2/blob/master/README.md
version = "0.35.2"
default-features = false
features = ["image"]